--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name JunyoungMA
+          git config user.name WASSUP
           git config user.email cizk3400@gmail.com
           git add -A .
           git commit -m "generated"
